WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268574
[WebGPU] webgpu:api,validation,state,device_lost,* is failing
https://bugs.webkit.org/show_bug.cgi?id=268574
Summary
[WebGPU] webgpu:api,validation,state,device_lost,* is failing
Mike Wyrzykowski
Reported
2024-02-01 14:11:46 PST
[WebGPU] webgpu:api,validation,state,device_lost,* is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-01 14:12:01 PST
<
rdar://problem/122131203
>
Mike Wyrzykowski
Comment 2
2024-02-01 15:40:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23696
EWS
Comment 3
2024-02-04 20:45:37 PST
Committed
274083@main
(b7bd89ba227d): <
https://commits.webkit.org/274083@main
> Reviewed commits have been landed. Closing PR #23696 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug