[WebGPU] webgpu:api,validation,state,device_lost,* is failing https://bugs.webkit.org/show_bug.cgi?id=268574 <radar://122131203>

Reviewed by Dan Glastonbury.

Add validation for api,validation,state,* tests along with passing expectations
and updated CTS test files.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/state/device_lost/destroy-expected.txt:
* LayoutTests/http/tests/webgpu/webgpu/api/validation/state/device_lost/destroy.spec.js:
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::Device::createComputePipelineAsync):
* Source/WebGPU/WebGPU/Device.h:
(WebGPU::Device::isValid const): Deleted.
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::isDestroyed const):
(WebGPU::Device::destroy):
(WebGPU::Device::isValid const):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipelineAsync):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteDevice.cpp:
(WebKit::RemoteDevice::importExternalTextureFromVideoFrame):

Canonical link: https://commits.webkit.org/274083@main